<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wooden114"
    android:gravity="bottom"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/margin_xxxl"
            android:layout_marginTop="@dimen/margin_xl"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textStyle="bold"
            tools:text="New Text" />

        <RadioGroup
            android:id="@+id/radio_group_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="left">

            <RadioButton
                android:id="@+id/first_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team1"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/second_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team2"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/thurd_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team3"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/fouth_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team4"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textStyle="bold" />

        </RadioGroup>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_layout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/score"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onShowScoreClick"
            android:text="@string/show_score" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="onStartClick"
            android:singleLine="true"
            android:text="@string/start" />

    </LinearLayout>

</LinearLayout>