<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="bottom|start"
    android:background="@drawable/wooden114"
    android:weightSum="1">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Осталось: "
            android:id="@+id/text_timer"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="70sp"
            android:text="Large Text"
            android:id="@+id/timer"
            android:layout_gravity="center_horizontal|right" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:baselineAligned="false"
            android:gravity="right"
            android:layout_gravity="top">

        </LinearLayout>

        <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            android:id="@+id/word"
            android:textStyle="normal|bold"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/buttons">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/skip"
            android:id="@+id/skip"
            android:layout_weight="1"
            android:textAppearance="@android:style/TextAppearance.Large"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ok"
            android:id="@+id/ok"

            android:singleLine="true"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textAppearance="@android:style/TextAppearance.Large"/>
    </LinearLayout>

</LinearLayout>
